fix(bottomMenu): bottom menu being hidden by taskbar

--- a/src/components/Account/AccountMobile.module.css
+++ b/src/components/Account/AccountMobile.module.css
@@ -10,7 +10,6 @@
   justify-content: center;
 
   padding-bottom: 20px;
-  border: 1px solid red;
 }
 
 .accountMobileContent {
